--- a/niffler-e-2-e-tests-python/.env.sample
+++ b/niffler-e-2-e-tests-python/.env.sample
@@ -1,8 +1,10 @@
 FRONTEND_URL = http://frontend.niffler.dc
 GATEWAY_URL=http://gateway.niffler.dc:8090
+AUTH_URL=http://auth.niffler.dc:9000
 SPENDS_DB_URL=postgresql+psycopg2://postgres:secret@localhost:5432/niffler-spend
 TEST_USERNAME=
 TEST_PASSWORD=
 INVALID_USER=
 INVALID_PASSWORD=
 WRONG_PASSWORD=
+AUTH_SECRET=
